--- a/glide.yaml
+++ b/glide.yaml
@@ -14,3 +14,5 @@ import:
   version: ^1.2.0
 - package: gopkg.in/sirupsen/logrus.v1
   version: ^1.0.4
+- package: gopkg.in/jteeuwen/go-bindata.v3
+  version: ^3.0.7
